# shadowkeep

./: .editorconfig  .gitignore  README.md  config  config.py  grid.py  main.py  map.py  player.py  pyproject.toml  requirements.txt  run  setup  test
data/: settings.json
levels/: data.json
levels/01/: data.json
levels/1/: data.json
src/: generate_image.py  main.py
src/shadowkeep/: audio.py  config.py  dialog.py  dynamic_light.py  entities.py  game.py  grid.py  layer.py  main.py  map.py  monster.py  player.py  settings.py  text.py
src/shadowkeep/entities/: __init__.py  base.py  campfire.py  doors_keys.py  fireballs.py  interactable.py  match.py  monsters.py  slot.py  trapdoor.py
src/shadowkeep/lib/: coordinates.py  inventory.py  open_ai.py
tests/: test_game.py
tests/_utils/: __init__.py  fixtures.py  keys.py
